<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:id="@+id/recommend_dialog_item_root"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/recommend_father"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/recommend_dialog"
        android:orientation="vertical">


        <TextView
            android:id="@+id/take_dialog_take_photo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/take_picture"
            android:textColor="@color/point_select" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/point_select" />

        <TextView
            android:id="@+id/take_dialog_take_os"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/take_from_os"
            android:textColor="@color/point_select" />


    </LinearLayout>

    <TextView
        android:id="@+id/take_dialog_cancel"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/recommend_dialog"
        android:gravity="center"
        android:text="@string/cancel" />


</LinearLayout>