<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_color"
    android:orientation="vertical"
    tools:context="com.qianfeng.yyz.zhonghuasuan.mine.view.MineFragment">

    <RelativeLayout
        android:id="@+id/mine_rl_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF6666">

        <RelativeLayout
            android:id="@+id/mine_rl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/mine_tv_private_center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/mine_tv_private_center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mine_tv_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/mine_tv_message"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mine_rl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mine_rl_top"
            android:layout_margin="20dp"
            android:paddingBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/mine_default_header"
                android:layout_margin="10dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_center_unloginphoto"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:id="@+id/mine_ll_image_right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toRightOf="@+id/mine_default_header"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_tv_login"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mine_tv_back_money"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/mine_tv_get_money_record"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mine_rl_all_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:id="@+id/mine_tv_all_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/mine_tv_all_order"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/mine_tv_look_all_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:padding="10dp"
            android:text="@string/mine_tv_look_all_order"
            android:textSize="16sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_navigation_top"></View>

    <ScrollView
        android:id="@+id/mine_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/mine_scroll_linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/mine_rbtn_hor"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/white"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/mine_rbtn_write"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="3dp"
                    android:drawableTop="@mipmap/personal_center_unfilll"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/mine_rbtn_write"
                    android:textColor="@color/default_color"
                     />

                <RadioButton
                    android:id="@+id/mine_rbtn_backmoney"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="3dp"
                    android:drawableTop="@mipmap/personal_center_cashnumber"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/mine_rbtn_backmoney"
                    android:textColor="@color/default_color"
                    />

                <RadioButton
                    android:id="@+id/mine_rbtn_ordererror"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawablePadding="3dp"
                    android:drawableTop="@mipmap/personal_center_wrong"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/mine_rbtn_ordererror"
                    android:textColor="@color/default_color"
                     />

                <RadioButton
                    android:id="@+id/mine_rbtn_appeal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:checked="false"
                    android:drawablePadding="3dp"
                    android:drawableTop="@mipmap/personal_center_appeal"
                    android:gravity="center_horizontal"
                    android:padding="3dp"
                    android:text="@string/mine_rbtn_appeal"
                    android:textColor="@color/default_color"
                     />

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/home_navigation_top"></View>

            <RelativeLayout
                android:id="@+id/mine_rl_backmoney"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_backmoney"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mine_rl_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_collect"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/mine_rl_traces"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_traces"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/home_navigation_top"></View>
            <RelativeLayout
                android:id="@+id/mine_rl_appeal_record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_appeal_record"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mine_rl_invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_invite"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/mine_rl_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_setting"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/home_navigation_top"></View> <RelativeLayout
            android:id="@+id/mine_rl_known"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/mine_tv_known"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@mipmap/personal_center_back"
                android:scaleType="centerCrop" />
        </RelativeLayout>

            <RelativeLayout
                android:id="@+id/mine_rl_help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_help"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/mine_rl_qq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_qq"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/home_navigation_top"></View>
            <RelativeLayout
                android:id="@+id/mine_rl_order_query"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:clickable="true">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/mine_tv_order_query"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="@mipmap/personal_center_back"
                    android:scaleType="centerCrop" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>

