<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.qianfeng.yyz.zhonghuasuan.home.view.HomeActivity">


    <RelativeLayout
        android:id="@+id/home_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/home_bottom_diver"
        >
    </RelativeLayout>
    <TextView
        android:id="@+id/home_bottom_diver"
        android:layout_above="@+id/home_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/home_bottom_diver"
        />
    <RadioGroup
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:id="@+id/home_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

        <RadioButton
            android:textColor="@color/point_select"
            android:textSize="11sp"
            android:checked="true"
            android:drawableTop="@drawable/home_rb_select"
            android:button="@null"
            android:id="@+id/home_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:gravity="center_horizontal"
            />
        <RadioButton
            android:textColor="@color/default_color"
            android:textSize="11sp"
            android:drawableTop="@drawable/home_newest_select"
            android:button="@null"
            android:id="@+id/newest_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newest"
            android:gravity="center_horizontal"
            />
        <RadioButton
            android:textColor="@color/default_color"
            android:textSize="11sp"
            android:drawableTop="@drawable/home_search_select"
            android:button="@null"
            android:id="@+id/search_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/search"
            android:gravity="center_horizontal"
            />
        <RadioButton
            android:textColor="@color/default_color"
            android:textSize="11sp"
            android:drawableTop="@drawable/home_mine_select"
            android:button="@null"
            android:id="@+id/mine_rb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mine"
            android:gravity="center_horizontal"
            />

    </RadioGroup>
</RelativeLayout>
